# repocaster

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.setup  README.md  SECURITY.md  SETUP.md  action.yml  pyproject.toml
.github/workflows/: repocaster.yml  test.yml
docs/: BOOTSTRAP.md  example.html
docs/plans/: 2026-05-24-repocaster-mvp.md
scripts/: create_actions_role.py  create_output_bucket.py  github_app_manifest.py
src/repocaster/: audio.py  bedrock.py  cli.py  commands.py  config.py  context.py  pipeline.py  publish.py  pull_request.py  quota.py  script.py
src/repocaster/github_app/: webhook.py
tests/: test_commands.py  test_config.py  test_context.py  test_generation.py  test_infra_scripts.py  test_public_repo_safety.py  test_pull_request.py  test_quota.py  test_webhook.py
